# mks-zombie

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
src/: Piano.cpp  Piano.h  SynthEngine.cpp  SynthEngine.h  SynthParams.h  main.cpp
